update freeipa deploy vars and helm playbook

--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -69,24 +69,26 @@ sololab:
 
     ## freeipa
     FreeIPA:
-      # pod: 
-      #   state: absent # present / absent
-      #   absent_force: true # true / false
-      #   systemd_service: freeipa # name of the systemd service
-      #   kube_file_host: localhost # tmpl mounted inside podman runner container
-      #   helm_chart_ref: /HelmWorkShop/helm-charts/charts/freeipa
-      #   helm_value_file: /HelmWorkShop/helm-charts/charts/freeipa/values-sololab.yaml
-      #   helm_release_name: freeipa
-      pod:
-        state: absent # absent / present
+      pod: 
+        state: present # present / absent
         absent_force: true # true / false
-        systemd_service: freeipa
-        kube_file_host: localhost # inside podman runner container
-        kube_file_tmpl: /KubeWorkShop/FreeIPA/aio-freeipa.yaml.j2
+        systemd_service: freeipa # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        helm_chart_ref: /HelmWorkShop/helm-charts/charts/freeipa
+        helm_value_file: /HelmWorkShop/helm-charts/charts/freeipa/values-sololab.yaml
+        helm_release_name: freeipa
         container_name: freeipa-freeipa
-        image: "quay.io/freeipa/freeipa-server:centos-9-stream"
-        hostname: ipa.infra.sololab
         hostIP: 192.168.255.11
+      # pod:
+      #   state: absent # absent / present
+      #   absent_force: true # true / false
+      #   systemd_service: freeipa
+      #   kube_file_host: localhost # inside podman runner container
+      #   kube_file_tmpl: /KubeWorkShop/FreeIPA/aio-freeipa.yaml.j2
+      #   container_name: freeipa-freeipa
+      #   image: "quay.io/freeipa/freeipa-server:centos-9-stream"
+      #   hostname: ipa.infra.sololab
+      #   hostIP: 192.168.255.11
       app:
         domain_name: infra.sololab
         realm: infra.sololab
@@ -131,7 +133,7 @@ sololab:
     ## traefik
     Traefik:
       pod:
-        state: present # present / absent
+        state: absent # present / absent
         absent_force: false # true / false
         systemd_service: traefik # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
@@ -177,7 +179,7 @@ sololab:
     GitLab:
       pod:
         state: absent # present / absent
-        absent_force: true # true / false
+        absent_force: false # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/GitLab/aio-gitlab.yaml.j2
