remove dnf default config

--- a/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/vars/main.yml
+++ b/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/vars/main.yml
@@ -16,9 +16,9 @@ vars_package:
   podman:
     state: present
     include_cockpit_podman: false
-    dnf:
-      enablerepo: # updates-testing
-      update_cache: # true
+    # dnf:
+    #   enablerepo: updates-testing
+    #   update_cache: # true
 
 
 # target user to run rootless podman
