--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -43,7 +43,7 @@ sololab:
               # log_driver="journald"
               # log_size_max="10m"
               shm_size="128m"
-              tz = "Asia/Shanghai"
+              tz="Asia/Shanghai"
       vars_service:
         podman_socket:
           user_scope:
@@ -70,7 +70,7 @@ sololab:
     ## freeipa
     FreeIPA:
       pod: 
-        state: present # present / absent
+        state: absent # present / absent
         absent_force: true # true / false
         systemd_service: freeipa # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
@@ -106,7 +106,7 @@ sololab:
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/StepCA/aio-stepca.yaml.j2
         image: docker.io/smallstep/step-ca:latest
-        hostIP: 192.168.255.10
+        hostIP: 192.168.255.11
       app:
         DOCKER_STEPCA_INIT_NAME: sololab
         DOCKER_STEPCA_INIT_ACME: true
@@ -120,7 +120,7 @@ sololab:
         configs:
           - zone: infra.sololab
             record: step-ca
-            value: 192.168.255.10
+            value: 192.168.255.11
 
     ## traefik
     Traefik:
