--- a/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman_helm.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman_helm.yml
@@ -75,6 +75,7 @@
             conn_name: "{{ target_host.connection_id }}"
             type: ethernet
             dns4:
+              - "{{ FreeIPA.app.dns_forwarder }}"
               - "{{ FreeIPA.pod.hostIP }}"
             state: present
           when:
