add cloud-init config for fedora

--- a/PackerWorkShop/Fedora/http/ks-fedora38.cfg
+++ b/PackerWorkShop/Fedora/http/ks-fedora38.cfg
@@ -56,7 +56,16 @@ hyperv-daemons
 %end
 
 # https://pykickstart.readthedocs.io/en/latest/kickstart-docs.html#chapter-6-post-installation-script
-%post
-dnf update
-dnf upgrade -y
+%post --log=/var/log/post_install.log
+cat > /etc/cloud/cloud.cfg.d/90_override_renderer.cfg << EOF
+system_info:
+  network:
+    renderers: ['network-manager', 'netplan', 'eni', 'sysconfig', 'freebsd', 'netbsd', 'openbsd']
+    activators: ['network-manager', 'eni', 'netplan', 'networkd']
+EOF
+
+rm -f /etc/NetworkManager/system-connections/eth0.nmconnection
+
+dnf -y update
+dnf -y upgrade 
 %end
