--- a/AnsibleWorkShop/runner/project/Invoke-PodmanRootlessProvision.yml
+++ b/AnsibleWorkShop/runner/project/Invoke-PodmanRootlessProvision.yml
@@ -1,11 +1,9 @@
 # code: language=ansible
 ---
-- hosts: "{{ host }}" # kube-2
+- hosts: "{{ host_admin }}" # kube-2
   gather_facts: yes
-  vars_files:
-    - "{{ extravars_file }}"
   tasks:
-     # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
+    # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
     - name: run role ansible-podman-rootless-provision
       ansible.builtin.include_role:
         name: ansible-podman-rootless-provision
