--- a/AnsibleWorkShop/runner/project/Update-FreeIPAConfig.yml
+++ b/AnsibleWorkShop/runner/project/Update-FreeIPAConfig.yml
@@ -124,26 +124,11 @@
               # https://forum.vyos.io/t/how-to-configure-dhcp-server-to-update-dns-zone/6231/6
               # https://kb.isc.org/docs/isc-dhcp-41-manual-pages-dhcpdconf#:~:text=ddns%2Ddomainname%20name%3B
               - set service dhcp-server dynamic-dns-update
-              - set service dhcp-server shared-network-name LAN shared-network-parameters "key {{ FreeIPA.app.tsig_key_name }} { algorithm {{ FreeIPA.app.tsig_algorithm }}; secret {{ FreeIPA.app.tsig_secret }}; };"
-              - set service dhcp-server shared-network-name LAN shared-network-parameters "ddns-domainname &quot;{{ FreeIPA.app.dns_zonename }}&quot;;"
-              - set service dhcp-server shared-network-name LAN shared-network-parameters "ddns-rev-domainname &quot;in-addr.arpa.&quot;;"
-              - set service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ FreeIPA.app.dns_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }"
-              - set service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ FreeIPA.app.dns_rev_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }"
+              - "set service dhcp-server shared-network-name LAN shared-network-parameters 'key {{ FreeIPA.app.tsig_key_name }} { algorithm {{ FreeIPA.app.tsig_algorithm }}; secret {{ FreeIPA.app.tsig_secret }}; };'"
+              - "set service dhcp-server shared-network-name LAN shared-network-parameters 'ddns-domainname &quot;{{ FreeIPA.app.dns_zonename }}&quot;;'"
+              - "set service dhcp-server shared-network-name LAN shared-network-parameters 'ddns-rev-domainname &quot;in-addr.arpa.&quot;;'"
+              - "set service dhcp-server shared-network-name LAN shared-network-parameters 'zone {{ FreeIPA.app.dns_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }'"
+              - "set service dhcp-server shared-network-name LAN shared-network-parameters 'zone {{ FreeIPA.app.dns_rev_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }'"
             save: True
           when:
             - FreeIPA.pod.state == 'present'
-
-        - name: absent vyos dhcp ddns
-          vyos.vyos.vyos_config :
-            lines:
-              # https://forum.vyos.io/t/how-to-configure-dhcp-server-to-update-dns-zone/6231/6
-              # https://kb.isc.org/docs/isc-dhcp-41-manual-pages-dhcpdconf#:~:text=ddns%2Ddomainname%20name%3B
-              - delete service dhcp-server dynamic-dns-update
-              - delete service dhcp-server shared-network-name LAN shared-network-parameters "key {{ FreeIPA.app.tsig_key_name }} { algorithm {{ FreeIPA.app.tsig_algorithm }}; secret {{ FreeIPA.app.tsig_secret }}; };"
-              - delete service dhcp-server shared-network-name LAN shared-network-parameters "ddns-domainname &quot;{{ FreeIPA.app.dns_zonename }}&quot;;"
-              - delete service dhcp-server shared-network-name LAN shared-network-parameters "ddns-rev-domainname &quot;in-addr.arpa.&quot;;"
-              - delete service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ FreeIPA.app.dns_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }"
-              - delete service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ FreeIPA.app.dns_rev_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }"
-            save: True
-          when:
-            - FreeIPA.pod.state == 'absent'
