--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "ansible.python.interpreterPath": "c:\\Users\\drw_0\\AppData\\Local\\Programs\\Python\\Python311\\python.exe"
+    "ansible.python.interpreterPath": "c:\\Program Files\\Python311\\python.exe"
 }
