--- a/AnsibleWorkShop/builder/execution-environment.yml
+++ b/AnsibleWorkShop/builder/execution-environment.yml
@@ -34,18 +34,24 @@ dependencies:
 
 images:
   base_image:
-    name: quay.io/centos/centos:stream9
+    name: registry.fedoraproject.org/fedora:38
+    # ref: https://github.com/ansible/ansible-builder/blob/devel/docs/definition.rst
+    # Other available base images:
+    #   - quay.io/centos/centos:stream9
+    #   - quay.io/rockylinux/rockylinux:9
+    #   - quay.io/centos/centos:stream9
+    #   - registry.fedoraproject.org/fedora:38
 
 additional_build_steps:
   # prepend_galaxy: |
   #   RUN find /output/scripts/ -type f -exec chmod +x {} \;
   # prepend_builder: |
   #   RUN find /output/scripts/ -type f -exec chmod +x {} \;
-  prepend_final:
-    # - RUN find /output/scripts/ -type f -exec chmod +x {} \;
-    - RUN dnf install 'dnf-command(config-manager)' -y && dnf config-manager --set-enabled crb && dnf install epel-release epel-next-release -y
+  # prepend_final:
+  #   # - RUN find /output/scripts/ -type f -exec chmod +x {} \;
+  #   - RUN dnf install 'dnf-command(config-manager)' -y && dnf config-manager --set-enabled crb && dnf install epel-release epel-next-release -y
   append_final:
-    - ARG TERRAFORM_VERSION=1.4.6
+    - ARG TERRAFORM_VERSION=1.5.5
 
     - RUN cd /tmp &&
       curl -LO https://releases.hashicorp.com/terraform/$TERRAFORM_VERSION/terraform_${TERRAFORM_VERSION}_linux_amd64.zip &&
