--- a/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanSocketService.yml
+++ b/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanSocketService.yml
@@ -22,6 +22,7 @@
         owner: "{{ target_user }}"
         group: "{{ target_user }}"
       become: true
+      become_user: "{{ target_user }}"
 
     - name: Set systemd user scope podman socket service
       ansible.builtin.systemd:
