--- a/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanConfig.yml
+++ b/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanConfig.yml
@@ -25,9 +25,13 @@
             - path: "{{ app_config.podman.containers_conf.path | replace(app_config.podman.containers_conf.path.split('/')[-1],'')}}"
               state: directory
               mode: u=rwx,g-rwx,o-rwx
+              owner: "{{ target_user }}"
+              group: "{{ target_user }}"
             - path: "{{ app_config.podman.containers_conf.path }}"
               state: touch
               mode: u=rw,g=r,o=r
+              owner: "{{ target_user }}"
+              group: "{{ target_user }}"
           when:
             - podman_containers_conf.stat.exists is defined
             - podman_containers_conf.stat.exists is false
