try comment out becom in podman config

--- a/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanConfig.yml
+++ b/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanConfig.yml
@@ -1,8 +1,8 @@
 # code: language=ansible
 ---
 - name: Set Podman containers.conf
-  become: true
-  become_user: "{{ target_user }}"
+  # become: true
+  # become_user: "{{ target_user }}"
   when:
     - definitive_app_config_podman_containers_conf.state != "skipped"
   block:
